# RuffRAGs

./: .gitignore  README.md  hybrid_ret.py  pyproject.toml  rag.py  script.py
.claude/: CLAUDE.md
.claude/skills/: improve-me.md
docs/: 01_intro_to_agentic_ai.md  02_rag_and_agentic_ai.md  03_memory_in_agents.md  04_tool_use_in_agents.md  05_react_planning_pattern.md  06_multi_agent_systems.md  07_rag_vs_finetuning.md  08_structured_outputs.md  09_prompt_injection_and_security.md  10_evaluating_rag_systems.md  11_chunking_strategies.md
