[project]
name = "ruffraGs"
version = "0.1.0"
description = "Hybrid RAG agent with LangGraph, FAISS, and BM25 retrieval"
requires-python = ">=3.11"
dependencies = [
    "langchain==1.1.0",
    "langchain-classic==1.0.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.20",
    "langchain-text-splitters==1.0.0",
    "langchain-huggingface==1.1.0",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.1.11",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.2",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.3",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "arize-phoenix>=8.0",
    "openinference-instrumentation-langchain>=0.1.29",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0",
    "pytest>=8.0",
]
